# kernel

./: .clang-format  .gdbinit  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  LICENSE.txt  Makefile  README.md  build.rs  makefile
.cargo/: config.toml
.githooks/: commit-msg
.github/workflows/: x86-debug.yml  x86-release.yml  x86.yml
doc/: kernel.doxygen  setup.md
doc/man/1-kcalls/: excpctrl.md  excpresume.md  excpwait.md  getegid.md  geteuid.md  getgid.md  getuid.md  pinfo.md  setegid.md  seteuid.md  setgid.md  setuid.md
docker/: .env  clean.yml  debug-ccluster.yml  debug-iocluster.yml  debug.yml  distclean.yml  image-tests.yml  run-ccluster.yml  run-iocluster.yml  run.yml  test-ccluster.yml
doxygen/: doxygen.conf  doxygen.i386-pc  doxygen.mppa256  doxygen.or1k-pc
img/: mppa256.img  optimsoc.img  qemu-openrisc.img  qemu-riscv32.img  qemu-x86.img  unix64.img
include/: decl.h  elf.h  errno.h  nanvix.h  stdarg.h  stddef.h
include/arch/: arch.h  x86.h
include/arch/cluster/: i386.h  k1b.h  or1k.h
include/arch/core/: i386.h  k1b.h  or1k.h
include/arch/i386/: 8253.h  8259.h  cache.h  context.h  core.h  cpu.h  excp.h  gdt.h  i386.h  idt.h  int.h  io.h  mem.h  mmu.h  paging.h  tlb.h  tss.h
include/arch/k1b/: cache.h  clock.h  context.h  core.h  cpu.h  elf.h  excp.h  int.h  io.h  ivt.h  k1b.h  mem.h  mmu.h  pic.h  regs.h  spinlock.h  tlb.h  util.h
include/arch/or1k/: cache.h  clock.h  context.h  core.h  cpu.h  excp.h  int.h  io.h  mem.h  mmu.h  ompic.h  or1k.h  pic.h  regs.h  spinlock.h  tlb.h
include/arch/processor/: bostan.h  i386-qemu.h  or1k-qemu.h
include/arch/x86/: cpu.h  mmu.h
include/asm/: x86.S
include/dev/: pci.h  uart.h
include/dev/net/: ethoc.h  net.h  rtl8139.h
include/driver/: 8250.h  console.h  jtag.h
include/grub/: mboot.h  mboot2.h
include/nanvix/: cc.h  config.h  const.h  dev.h  errno.h  hal.h  klib.h  klog.h  libcore.h  mm.h  portal.h  resource.h  signal.h  syscall.h  thread.h  types.h
include/nanvix/hal/: clock.h  cluster.h  context.h  core.h  cpu.h  debug.h  exception.h  hal.h  interrupt.h  io.h  memory.h  processor.h  spinlock.h  target.h
include/nanvix/kernel/: config.h  dev.h  event.h  excp.h  hal.h  iam.h  kargs.h  kcall.h  kernel.h  kmod.h  lib.h  limits.h  log.h  mailbox.h  mm.h  noc.h  pm.h  portal.h  signal.h  sync.h  syscall.h  thread.h  timer.h
include/net/: clusters.h  mailbox.h  noc.h
include/sys/: types.h
iso/boot/grub/: grub.cfg
scripts/: run.sh
scripts/setup/: qemu.sh  toolchain.sh  ubuntu.sh
src/: Makefile  debug.rs  error.rs  kargs.rs  kimage.rs  klog.rs  kmain.rs  kpanic.rs  lib.rs  macros.rs  makefile  stdio.rs  stdout.rs  uart.rs
src/bench/: kbench.h  kcall.c  main.c  makefile  matrix.c
src/collections/bitmap/: bitmap.rs  mod.rs  test.rs
src/collections/raw_array/: mod.rs  raw_array.rs
src/collections/slab/: mod.rs  slab.rs
src/event/: dispatcher.rs  manager.rs  mod.rs
src/event/kcall/: evctrl.rs  mod.rs  resume.rs  wait.rs
src/hal/: mod.rs
src/hal/arch/: mod.rs
src/hal/cpu/: mod.rs
src/hal/io/: allocator.rs  ioport.rs  mmio.rs  mod.rs
src/hal/platform/: acpi.rs  bootinfo.rs  madt.rs  microvm.rs  mod.rs
src/io/kcall/: mmio_alloc.rs  mmio_free.rs  pmio_alloc.rs  pmio_free.rs  pmio_read.rs  pmio_write.rs
src/ipc/: kcall.rs  mod.rs
src/ipc/mbx/: mailbox.rs
src/kcall/: dispatcher.rs  handler.rs  mod.rs
src/kcall/pm/: egid.rs  (+8 more)
src/kernel/: Makefile  elf.c  kcall.c  kmain.c  kmod.c  makefile  makefile.i386  makefile.i386-pc  makefile.mppa256  makefile.or1k-pc  memory.c
src/klib/: bitmap.rs  mod.rs  raw_array.rs  slab.rs
src/libcore/: Makefile  memcmp.c  memcpy.c  memset.c  strlen.c  strncmp.c  strncpy.c  udivdi3.c  vsnprintf.c
src/libdev/: Makefile  uart.c
src/libnanvix/: Cargo.toml  Makefile
src/libs/: makefile
src/lwip/: makefile
src/mboot/: acpi.rs  info.rs  memory_map.rs  mod.rs  module.rs
src/mm/: elf.rs  kheap.rs  kredzone.rs  kstack.rs  mod.rs
src/pm/: mod.rs  stack.rs
src/servers/: Makefile  crt0.S  main.c
src/sys/: config.rs  mod.rs
src/test/: clusters.c  hello.c  kmailbox.c  kportal.c  ksync.c  kthread.c  main.c  makefile  net.c  noc.c  perf.c  signal.c  sleep.c  test.h  thread.c
ssh/: config  travis_microkernel_rsa.enc
tools/dev/: setup-pre-requisites.sh  setup-prerequisites.sh  setup-qemu.sh  setup-toolchain.sh
tools/image/: build-image.sh
tools/run/: run-qemu.sh  run.sh
(+602 files in other folders)
