# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "kernel"
version = "0.0.23"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Nanvix Kernel"
homepage = "https://github.com/nanvix"

[[bin]]
name = "kernel"
path = "src/kmain.rs"

[dependencies]
arch = { git = "https://github.com/nanvix/arch", branch = "releases/v1.1.0" }
bitmap = { git = "https://github.com/nanvix/bitmap", branch = "releases/v0.0.2" }
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.2" }
raw-array = { git = "https://github.com/nanvix/raw-array", branch = "releases/v0.0.2" }
slab = { git = "https://github.com/nanvix/slab", branch = "releases/v0.0.2" }
sys = { git = "https://github.com/nanvix/sys", branch = "releases/v1.1.2" }

[features]
default = ["pc"]
baremetal = ["warn"]
pc = ["warn"]
isapc = ["warn"]
trace = ["info"]
info = ["warn"]
warn = ["error"]
error = []
smp = []

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
