# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "kernel"
version = "0.4.3"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Nanvix Kernel"
homepage = "https://github.com/nanvix"

[[bin]]
name = "kernel"
path = "src/kmain.rs"

[dependencies]
arch = { git = "https://github.com/nanvix/arch", branch = "releases/v1.3.1", features = [
    "acpi",
    "cpuid",
    "ioapic",
    "madt",
    "msr",
    "pic",
    "xapic",
] }
cfg-if = "1.0.0"
bitmap = { git = "https://github.com/nanvix/bitmap", branch = "releases/v0.0.5" }
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.5" }
raw-array = { git = "https://github.com/nanvix/raw-array", branch = "releases/v0.0.5" }
slab = { git = "https://github.com/nanvix/slab", branch = "releases/v0.0.5" }
sys = { git = "https://github.com/nanvix/sys", branch = "releases/v1.4.0" }

[build-dependencies]
cc = "1.1.18"
cfg-if = "1.0.0"

[features]
default = ["qemu-pc"]

# Machine Types
microvm = ["stdio"]
pc = ["bios", "cmos", "mboot", "pit", "warn"]
qemu-pc = ["pc"]
qemu-pc-smp = ["qemu-pc", "smp"]
qemu-baremetal = ["pc"]
qemu-baremetal-smp = ["qemu-baremetal", "smp"]
qemu-isapc = ["pc"]

# Platform Features
smp = []
bios = []
cmos = []
mboot = []
pit = ["arch/pit"]
stdio = []

# Logging Features
trace = ["debug"]
debug = ["info"]
info = ["warn"]
warn = ["error"]
error = []

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
